...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Afs-EB-N6G">
                                <rect key="frame" x="74" y="220" width="227" height="30"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E32-A1-eYP">
                                <rect key="frame" x="74" y="273" width="227" height="30"/>
                                <constraints>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dKR-gP-pNF">
                                <rect key="frame" x="164" y="361" width="49" height="30"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" white="0.25915178570000003" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="74F-8R-Fz4">
                                                    <rect key="frame" x="184" y="59" width="42" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="BudgetRemaining"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" white="0.25915178570000003" alpha="1" colorSpace="calibratedWhite"/>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Budgets" id="WFS-eb-Anx">
                        <leftBarButtonItems>
                            <barButtonItem title="Logout" id="kuH-1k-X0z">
...
                                                    <rect key="frame" x="342" y="0.0" width="18" height="18"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <state key="normal" title="Button" image="edit"/>
                                                    <connections>
                                                        <action selector="editCategory:" destination="1U3-U1-hLX" eventType="touchUpInside" id="77W-sh-Omk"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="325" height="20"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <state key="normal" title="History"/>
                                        <connections>
                                            <segue destination="yj9-yi-9Ff" kind="show" identifier="historySegue" id="tzB-SS-7SY"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Amout Spent" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4wG-y9-kyE">
                                                    <rect key="frame" x="8" y="98" width="359" height="22"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="amountSpent"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="done"/>
                                                </textField>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="What'd you buy?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IvQ-ca-2t4">
                                                    <rect key="frame" x="8" y="144" width="359" height="22"/>
                                                    <nil key="textColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PEX-1X-WPv">
                                <rect key="frame" x="247" y="540" width="112" height="30"/>
                                <state key="normal" title="Add Transaction"/>
                                <connections>
                                    <action selector="addTransactionButtonPress:" destination="ShU-31-v0c" eventType="touchUpInside" id="Jxy-vH-pk2"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKz-Le-1Ia">
                                <rect key="frame" x="16" y="540" width="139" height="30"/>
                                <state key="normal" title="Remove Transaction"/>
                                <connections>
                                    <action selector="removeTransactionButtonPress:" destination="ShU-31-v0c" eventType="touchUpInside" id="FbN-yo-bgg"/>
...
                                <rect key="frame" x="122.5" y="617" width="130" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="addTransaction"/>
                                <state key="normal" title="Add Transaction(s)"/>
                                <connections>
                                    <action selector="addTransactionsButtonPress:" destination="ShU-31-v0c" eventType="touchUpInside" id="VLb-cM-5So"/>
...
